Prevent page from jumping when opening a modal
This CSS prevents the page from jumping when a modal is opened but
still causing the background to be not scrollable for the user.

Closes #24.

--- a/modal.scss
+++ b/modal.scss
@@ -23,11 +23,11 @@ html {
 }
 
 .has-overlay {
-	height: 100%;
+	overflow: hidden;
 
 	> body {
 		height: 100%;
-		overflow-y: hidden;
+		overflow-y: scroll;
 	}
 }
 
